<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marcelo Avancini / Leandro Rebelo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_close">Sair</string>
    <string name="title_activity_edit_user">EditContactActivity</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="save">Salvar</string>
    <string name="plus">+</string>
    <string name="id_nome">ID / Nome</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefone</string>
    <string name="nome">Nome</string>
    <string name="menu_new_user">Novo usuário</string>
    <string name="remove">Excluir</string>
    <string name="title_activity_edit_role">EditRoleActivity</string>

</resources>
